--- a/Starlight/Assembly-CSharp.csproj
+++ b/Starlight/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\CatController.cs" />
+    <Compile Include="Assets\Scripts\cloud.cs" />
     <Compile Include="Assets\Scripts\FishController.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\PickupStar.cs" />
